# Copyright (C) Codeplay Software Limited. All Rights Reserved.

add_subdirectory(hello)
add_subdirectory(ternary)
add_subdirectory(vector_add)
add_subdirectory(vector_add_wfv)
add_subdirectory(blur)
add_subdirectory(barrier_print)
add_subdirectory(barrier_sum)
add_subdirectory(matrix_multiply)
add_subdirectory(matrix_multiply_tiled)
add_subdirectory(concatenate_dma)
add_subdirectory(copy_buffer)
